--- a/recipe-frontend/.env
+++ b/recipe-frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://your-recipe-api.onrender.com/api/v1/recipes
+REACT_APP_API_URL=https://rails-react-recipe-finder.onrender.com/api/v1/recipes
